--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+#Project specific stuff.
+ocfa/step1/stripped2.bz2
+ocfa/step1/stripped3.bz2
+ocfa/step1/stripped4.bz2
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
