see a bit of the big picture

--- a/ocfa/step5/Makefile
+++ b/ocfa/step5/Makefile
@@ -1,4 +1,4 @@
-all: stripped1_modules.eps stripped2_modules.eps stripped3_modules.eps stripped4_modules.eps
+all: stripped1_modules.eps stripped2_modules.eps stripped3_modules.eps stripped4_modules.eps stripped1_modtypes.eps stripped2_modtypes.eps stripped3_modtypes.eps stripped4_modtypes.eps
 
 %.eps : %.dot
 	fdp -Tps $< > $@
@@ -6,3 +6,5 @@ all: stripped1_modules.eps stripped2_modules.eps stripped3_modules.eps stripped4
 %_modules.dot : ../step1/%
 	./flow2dot.py  $< > $@
 
+%_modtypes.dot : ../step1/%
+	./genflow2dot.py $< > $@
