--- a/debstuf/control
+++ b/debstuf/control
@@ -5,7 +5,7 @@ Essential: no
 Version: 0.9.9-1
 Architecture: all
 Installed-Size: 1160
-Depends: python-blake2,python-fadvise,python-xattr,python-redis,python-fuse,python-libewf,fuse,redis-server
+Depends: python-pyblake2,python-fadvise,python-xattr,python-redis,python-fuse,python-libewf,fuse,redis-server
 Recommends: 
 Maintainer: Rob J Meijer <pibara@gmail.com>
 Description: MattockFS Computer-Forensic-Archive and Message-Bus file-system.
